--- a/index.html
+++ b/index.html
@@ -7,10 +7,34 @@
     <link rel="apple-touch-icon" sizes="76x76" href="">
     <link rel="stylesheet" href="css/estilos.css">
     <script src="https://kit.fontawesome.com/c8452dd290.js" crossorigin="anonymous"></script>
-    <script src="js\funciones.js"></script>
     <title>CarAsistBA</title>
 </head>
 <body>
-    <h1>Hola</h1>
+<header>
+    <div class="wrapper">
+        <a href="#">CarAsistBA</a>
+        <nav>
+            <ul>
+                <li class="active"><a href="#">Inicio</a></li>
+                <li><a href="#">Vende</a></li>
+                <li><a href="#">Compra</a></li>
+                <li><a href="#">Cotizar</a></li>
+                <li><a href="#">Nosotros</a></li>
+            </ul>
+        </nav>
+        <a href="" class="cta">Vender</a>
+    </div>
+    <div class="nav-bg"></div>
+</header>
+    
+<section id="hero">
+    <h1>COMPRAMOS TU AUTO DE ALTA GAMA</h1>
+    <h1>VENDÉ TU AUTO HOY</h1>
+</section>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.22/dist/lenis.min.js"></script>
+<script src="js\funciones.js"></script>
+
 </body>
 </html>
