--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 <header>
     <div class="wrapper">
-        <a href="#">CarAsistBA</a>
+        <a href="#hero">CarAsistBA</a>
         <nav>
             <ul>
-                <li class="active"><a href="#">Inicio</a></li>
-                <li><a href="#">Vende</a></li>
-                <li><a href="#">Compra</a></li>
+                <li class="active"><a href="#hero">Inicio</a></li>
+                <li><a href="#introduccion">Vende</a></li>
+                <li><a href="#general">Compra</a></li>
                 <li><a href="#">Cotizar</a></li>
                 <li><a href="#">Nosotros</a></li>
             </ul>
@@ -36,5 +36,20 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.22/dist/lenis.min.js"></script>
 <script src="js\funciones.js"></script>
 
+<section id="introduccion">
+    <!-- <img src="assets\pngegg.png" alt=""> -->
+    <div class="intro-titulo">
+        <h2>Necesitas ayuda? Nosotros somos la Solucion</h2>
+        <h1>CarAssistBA</h1>
+    </div>
+</section>
+
+<section id="general">
+
+</section>
+
+<footer>
+
+</footer>
 </body>
 </html>
