--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav>
             <ul>
                 <li class="active"><a href="#hero">Inicio</a></li>
-                <li><a href="#introduccion">Vende</a></li>
-                <li><a href="#general">Compra</a></li>
+                <li><a href="#introduccion">Servicios</a></li>
+                <li><a href="#nosotros">Nosotros</a></li>
+                <li><a href="#">Comprar</a></li>
                 <li><a href="#">Cotizar</a></li>
-                <li><a href="#">Nosotros</a></li>
             </ul>
         </nav>
         <a href="" class="cta">Vender</a>
@@ -30,6 +30,9 @@
 <section id="hero">
     <h1>COMPRAMOS TU AUTO DE ALTA GAMA</h1>
     <h1>VENDÉ TU AUTO HOY</h1>
+
+    <!-- <h2>Necesitas ayuda? Nosotros somos la Solucion</h2>
+    <h1>CarAssistBA</h1> -->
 </section>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -39,12 +42,27 @@
 <section id="introduccion">
     <!-- <img src="assets\pngegg.png" alt=""> -->
     <div class="intro-titulo">
-        <h2>Necesitas ayuda? Nosotros somos la Solucion</h2>
-        <h1>CarAssistBA</h1>
+        <h1>Asesoramiento en Compra y Venta de vehículos</h1>
+        <p>Somos una empresa con más de cinco años de existencia y cientos de clientes satisfechos. Trabajamos en conjunto para lograr la mejor transacción.</p>
+        <p>Nos encargamos de todo el proceso y los tramites que se necesitan para vender o comprar un vehículo usado. Desde las reparaciones mecánicas hasta los trámites administrativos.</p>
+        <p>Queremos que nos recomienden y vuelvan a elegirnos.</p>
     </div>
 </section>
 
 <section id="general">
+    <div class="intro-general">
+        <h1>Lo ayudamos a vender su auto al mejor precio del mercado </h1>
+        <!-- <h2>Ayudamos a comprar y vender vehículos de particulares y empresas. </h2> -->
+        
+        <p>Mas de xxx clientes satisfechos desde 2020 y 150 en el año 2022, a quienes les vendimos o ayudamos a comprar su auto. </p>
+        <p>Nuestros honorarios son un porcentaje del valor del vehículo y nuestro mayor beneficio es que nuestros clientes obtengan el mejor valor, que vuelvan y nos recomienden.</p>
+        <p>Sugerimos mejoras para obtener un mayor valor por su vehículo. Nuestra experiencia nos marca un orden de prioridades y con su aprobación recomendamos las tareas necesarias para agregar valor.</p>
+        <p>Con los mejores especialistas para cada necesidad nosotros nos encargamos de verificar la calidad del trabajo. </p>
+    </div>
+</section>
+
+<section id="nosotros">
+    <h1>Quienes Somos?</h1>
 
 </section>
 
