--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
 </header>
     
 <section id="hero">
-    <h1>COMPRAMOS TU AUTO DE ALTA GAMA</h1>
-    <h1>VENDÉ TU AUTO HOY</h1>
+    <video autoplay loop muted plays-inline>
+        <source src="assets\hero_vid.mp4" type="video/mp4"> 
+    </video>
+    
+    <div class="content">
+        <h1>COMPRAMOS TU AUTO DE ALTA GAMA</h1>
+        <h1>VENDÉ TU AUTO HOY</h1>
+    </div>
 
     <!-- <h2>Necesitas ayuda? Nosotros somos la Solucion</h2>
     <h1>CarAssistBA</h1> -->
