--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class="content">
         <h1>COMPRAMOS TU AUTO DE ALTA GAMA</h1>
         <h1>VENDÉ TU AUTO HOY</h1>
+        <a href="#introduccion">EXPLORAR</a>
     </div>
 
     <!-- <h2>Necesitas ayuda? Nosotros somos la Solucion</h2>
@@ -46,17 +47,23 @@
 <script src="js\funciones.js"></script>
 
 <section id="introduccion">
-    <!-- <img src="assets\pngegg.png" alt=""> -->
-    <div class="intro-titulo">
+    <div class="intro-foto">
+        <img src="assets\side.jpg" alt="">
+    </div>
+    <div class="intro-info">
         <h1>Asesoramiento en Compra y Venta de vehículos</h1>
         <p>Somos una empresa con más de cinco años de existencia y cientos de clientes satisfechos. Trabajamos en conjunto para lograr la mejor transacción.</p>
         <p>Nos encargamos de todo el proceso y los tramites que se necesitan para vender o comprar un vehículo usado. Desde las reparaciones mecánicas hasta los trámites administrativos.</p>
         <p>Queremos que nos recomienden y vuelvan a elegirnos.</p>
     </div>
+    <div>
+        <!-- <img src="assets\autos_nofondo.png" alt=""> -->
+    </div>
 </section>
 
 <section id="general">
-    <div class="intro-general">
+    <img src="assets\ruta.jpg" alt="">
+    <div class="general-intro">
         <h1>Lo ayudamos a vender su auto al mejor precio del mercado </h1>
         <!-- <h2>Ayudamos a comprar y vender vehículos de particulares y empresas. </h2> -->
         
