--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="content">
         <h1>COMPRAMOS TU AUTO DE ALTA GAMA</h1>
         <h1>VENDÉ TU AUTO HOY</h1>
-        <a href="#introduccion">EXPLORAR</a>
+        <a href="#introduccion" id="btn-main">EXPLORAR</a>
     </div>
 
     <!-- <h2>Necesitas ayuda? Nosotros somos la Solucion</h2>
@@ -46,19 +46,37 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.22/dist/lenis.min.js"></script>
 <script src="js\funciones.js"></script>
 
-<section id="introduccion">
-    <div class="intro-foto">
-        <img src="assets\side.jpg" alt="">
-    </div>
-    <div class="intro-info">
-        <h1>Asesoramiento en Compra y Venta de vehículos</h1>
-        <p>Somos una empresa con más de cinco años de existencia y cientos de clientes satisfechos. Trabajamos en conjunto para lograr la mejor transacción.</p>
-        <p>Nos encargamos de todo el proceso y los tramites que se necesitan para vender o comprar un vehículo usado. Desde las reparaciones mecánicas hasta los trámites administrativos.</p>
-        <p>Queremos que nos recomienden y vuelvan a elegirnos.</p>
-    </div>
-    <div>
-        <!-- <img src="assets\autos_nofondo.png" alt=""> -->
-    </div>
+<section id="prueba">
+    
+        <div class="prueba-object">
+            <div class="prueba-card">
+                <h2>Encuentra TU auto ideal con nosotros</h2>
+                <p>Trabajamos en conjunto para lograr la mejor transacción.</p>
+                <a href="#introduccion" id="btn-main">EXPLORAR</a>
+            </div>
+
+            <div class="prueba-card card-medio">
+
+            </div>
+
+            <div class="prueba-card">
+                <div>
+                    <h2>+150</h2>
+                    <p>Clientes Satisfechos</p>
+
+                    <h2>+5</h2>
+                    <p>Años de Antiguedad</p>
+
+                    <h2>+20</h2>
+                    <p>Autos en nuestra Flota</p>
+                </div>
+            </div>
+            <div class="prueba-button">
+                <p>Nos encargamos del proceso, tramites e informacion necesaria para vender o comprar</p>
+                <p>Queremos que nos recomienden y vuelvan a ser nuestros clientes. </p>
+            </div>
+        </div>
+
 </section>
 
 <section id="general">
@@ -71,6 +89,18 @@
         <p>Nuestros honorarios son un porcentaje del valor del vehículo y nuestro mayor beneficio es que nuestros clientes obtengan el mejor valor, que vuelvan y nos recomienden.</p>
         <p>Sugerimos mejoras para obtener un mayor valor por su vehículo. Nuestra experiencia nos marca un orden de prioridades y con su aprobación recomendamos las tareas necesarias para agregar valor.</p>
         <p>Con los mejores especialistas para cada necesidad nosotros nos encargamos de verificar la calidad del trabajo. </p>
+    </div>
+</section>
+
+<section id="introduccion">
+    <div class="intro-info">
+        <h1>Asesoramiento en Compra y Venta de vehículos</h1>
+        <p>Somos una empresa con más de cinco años de existencia y cientos de clientes satisfechos. Trabajamos en conjunto para lograr la mejor transacción.</p>
+        <p>Nos encargamos de todo el proceso y los tramites que se necesitan para vender o comprar un vehículo usado. Desde las reparaciones mecánicas hasta los trámites administrativos.</p>
+        <p>Queremos que nos recomienden y vuelvan a elegirnos.</p>
+    </div>
+    <div class="intro-foto">
+        <img src="assets\side.jpg" alt="">
     </div>
 </section>
 
