--- a/index.html
+++ b/index.html
@@ -46,8 +46,37 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.22/dist/lenis.min.js"></script>
 <script src="js\funciones.js"></script>
 
+<section id="introduccion">
+    <div class="intro-info">
+        <div class="intro-cards">
+            <h3>Quiero Comprar</h3>
+            <div>
+                <p>Lo ayudamos a comprar su auto al mejor precio del mercado </p>
+                <p>Nos encargamos de los trámites administrativos que se necesitan para transferir un auto. <br> 
+                    Usted paga solo cuando el trámite se completa.</p>
+            </div>
+            <h4>Saber Mas</h4>
+        </div>
+        <div class="intro-cards">
+            <h3>Quiero Vender</h3>
+            <div>
+                <p>Nos encargamos de simplificarlo para usted, cuidando su tiempo y <br> protegiendo su capital.</p>
+                <p>Le dedicamos la atencion a todos los detalles para completar su tramite</p>
+            </div>
+            <h4>Saber Mas</h4>
+        </div>
+        <!-- <h1>Asesoramiento en Compra y Venta de vehículos</h1>
+        <p>Somos una empresa con más de cinco años de existencia y cientos de clientes satisfechos. Trabajamos en conjunto para lograr la mejor transacción.</p>
+        <p>Nos encargamos de todo el proceso y los tramites que se necesitan para vender o comprar un vehículo usado. Desde las reparaciones mecánicas hasta los trámites administrativos.</p>
+        <p>Queremos que nos recomienden y vuelvan a elegirnos.</p> -->
+    </div>
+    <div class="intro-foto">
+        <img src="assets\side.jpg" alt="">
+    </div>
+</section>
+
+
 <section id="prueba">
-    
         <div class="prueba-object">
             <div class="prueba-card">
                 <h2>Encuentra TU auto ideal con nosotros</h2>
@@ -56,7 +85,7 @@
             </div>
 
             <div class="prueba-card card-medio">
-
+                <img src="assets\top_view.png" alt="">
             </div>
 
             <div class="prueba-card">
@@ -76,31 +105,47 @@
                 <p>Queremos que nos recomienden y vuelvan a ser nuestros clientes. </p>
             </div>
         </div>
-
 </section>
 
 <section id="general">
     <img src="assets\ruta.jpg" alt="">
     <div class="general-intro">
-        <h1>Lo ayudamos a vender su auto al mejor precio del mercado </h1>
+        <!-- <h1>Te ayudamos a vender tu auto al mejor precio del mercado </h1> -->
         <!-- <h2>Ayudamos a comprar y vender vehículos de particulares y empresas. </h2> -->
         
-        <p>Mas de xxx clientes satisfechos desde 2020 y 150 en el año 2022, a quienes les vendimos o ayudamos a comprar su auto. </p>
+        <!-- <p>Mas de xxx clientes satisfechos desde 2020 y 150 en el año 2022, a quienes les vendimos o ayudamos a comprar su auto. </p>
         <p>Nuestros honorarios son un porcentaje del valor del vehículo y nuestro mayor beneficio es que nuestros clientes obtengan el mejor valor, que vuelvan y nos recomienden.</p>
         <p>Sugerimos mejoras para obtener un mayor valor por su vehículo. Nuestra experiencia nos marca un orden de prioridades y con su aprobación recomendamos las tareas necesarias para agregar valor.</p>
-        <p>Con los mejores especialistas para cada necesidad nosotros nos encargamos de verificar la calidad del trabajo. </p>
+        <p>Con los mejores especialistas para cada necesidad nosotros nos encargamos de verificar la calidad del trabajo. </p> -->
     </div>
-</section>
+    <div class="general-conteiner">
+        <div class="general-cards">
+            <!-- <h3>puto</h3> -->
 
-<section id="introduccion">
-    <div class="intro-info">
-        <h1>Asesoramiento en Compra y Venta de vehículos</h1>
-        <p>Somos una empresa con más de cinco años de existencia y cientos de clientes satisfechos. Trabajamos en conjunto para lograr la mejor transacción.</p>
-        <p>Nos encargamos de todo el proceso y los tramites que se necesitan para vender o comprar un vehículo usado. Desde las reparaciones mecánicas hasta los trámites administrativos.</p>
-        <p>Queremos que nos recomienden y vuelvan a elegirnos.</p>
-    </div>
-    <div class="intro-foto">
-        <img src="assets\side.jpg" alt="">
+        </div>
+        <div class="general-cards general-medio">
+            <h3>Tu solucion en un lugar</h3>
+        </div>
+        <div class="general-cards">
+            <div>
+                <h4>Servicio Premium</h4>
+            </div>
+            <ul>
+                <li>Verificación policial</li>
+                <li>Grabado de autopartes</li>
+                <li>Verificación Técnica Vehicular</li>
+                <li>Limpieza de interior</li>
+                <li>Mecánica general</li>
+                <li>Chapa y pintura</li>
+                <li>Gestión de infracciones</li>
+                <li>Certificación de firmas</li>
+                <li>Levantamiento de prendas</li>
+                <li>Asesoramiento Legal (Inhibiciones, Sucesiones)</li>
+                <li>Tramite de transferencia en Registro de la Propiedad Automotor</li>
+                <li>Requisitos</li>
+                <!-- - Página Web https: www.dnrpa.gov.ar/portal_dnrpa/ -->
+            </ul>
+        </div>
     </div>
 </section>
 
