--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class="prueba-button">
-                <p>Nos encargamos del proceso, tramites e informacion necesaria para vender o comprar</p>
+                <!-- <p>Nos encargamos del proceso, tramites e informacion necesaria para vender o comprar</p> -->
                 <p>Queremos que nos recomienden y vuelvan a ser nuestros clientes. </p>
             </div>
         </div>
@@ -110,6 +110,7 @@
 <section id="general">
     <img src="assets\ruta.jpg" alt="">
     <div class="general-intro">
+        <h1>Tu solucion en un solo lugar</h1>
         <!-- <h1>Te ayudamos a vender tu auto al mejor precio del mercado </h1> -->
         <!-- <h2>Ayudamos a comprar y vender vehículos de particulares y empresas. </h2> -->
         
@@ -119,14 +120,25 @@
         <p>Con los mejores especialistas para cada necesidad nosotros nos encargamos de verificar la calidad del trabajo. </p> -->
     </div>
     <div class="general-conteiner">
-        <div class="general-cards">
-            <!-- <h3>puto</h3> -->
+        <div class="general-main">
+            <div class="general-cards">
+                <h3>Titulo 1</h3>
+                <div>
+                    <p>Con los mejores especialistas para cada necesidad nosotros nos encargamos de verificar la calidad del trabajo. </p>
+                    <p>Cuando usted decide trabajar con nosotros, nos encargamos de todos los servicios</p>
+                </div>
+            </div>
 
+            <div class="general-cards">
+                <h3>Titulo 2</h3>
+                <div>
+                    <p>Sugerimos mejoras para obtener un mayor valor por su vehículo.</p>
+                    <p>Nuestra experiencia nos marca un orden de prioridades y con su aprobación recomendamos las tareas necesarias para agregar valor.</p>
+                </div>
+            </div>
         </div>
-        <div class="general-cards general-medio">
-            <h3>Tu solucion en un lugar</h3>
-        </div>
-        <div class="general-cards">
+
+        <div class="general-cards data">
             <div>
                 <h4>Servicio Premium</h4>
             </div>
