--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +12,17 @@
 <body>
 <header>
     <div class="wrapper">
-        <a href="#hero">CarAsistBA</a>
+        <a href="index.htm">CarAsistBA</a>
         <nav>
             <ul>
                 <li class="active"><a href="#hero">Inicio</a></li>
-                <li><a href="#introduccion">Servicios</a></li>
+                <li><a href="#general">Servicios</a></li>
                 <li><a href="#nosotros">Nosotros</a></li>
-                <li><a href="#">Comprar</a></li>
-                <li><a href="#">Cotizar</a></li>
+                <li><a href="subpaginas\compra.htm">Comprar</a></li>
+                <li><a href="subpaginas\venta.htm">Cotizar</a></li>
             </ul>
         </nav>
-        <a href="" class="cta">Vender</a>
+        <a href="subpaginas\venta.htm" class="cta">Vender</a>
     </div>
     <div class="nav-bg"></div>
 </header>
@@ -111,14 +111,8 @@
     <img src="assets\ruta.jpg" alt="">
     <div class="general-intro">
         <h1>Tu solucion en un solo lugar</h1>
-        <!-- <h1>Te ayudamos a vender tu auto al mejor precio del mercado </h1> -->
-        <!-- <h2>Ayudamos a comprar y vender vehículos de particulares y empresas. </h2> -->
-        
-        <!-- <p>Mas de xxx clientes satisfechos desde 2020 y 150 en el año 2022, a quienes les vendimos o ayudamos a comprar su auto. </p>
-        <p>Nuestros honorarios son un porcentaje del valor del vehículo y nuestro mayor beneficio es que nuestros clientes obtengan el mejor valor, que vuelvan y nos recomienden.</p>
-        <p>Sugerimos mejoras para obtener un mayor valor por su vehículo. Nuestra experiencia nos marca un orden de prioridades y con su aprobación recomendamos las tareas necesarias para agregar valor.</p>
-        <p>Con los mejores especialistas para cada necesidad nosotros nos encargamos de verificar la calidad del trabajo. </p> -->
     </div>
+
     <div class="general-conteiner">
         <div class="general-main">
             <div class="general-cards">
@@ -162,7 +156,7 @@
 </section>
 
 <section id="nosotros">
-    <h1>Quienes Somos?</h1>
+    <h1>Nosotros</h1>
 
 </section>
 
