--- a/index.htm
+++ b/index.htm
@@ -7,12 +7,12 @@
     <link rel="apple-touch-icon" sizes="76x76" href="">
     <link rel="stylesheet" href="css/estilos.css">
     <script src="https://kit.fontawesome.com/c8452dd290.js" crossorigin="anonymous"></script>
-    <title>CarAsistBA</title>
+    <title>CarAssistBA</title>
 </head>
 <body>
 <header>
     <div class="wrapper">
-        <a href="index.htm">CarAsistBA</a>
+        <a href="index.htm">CarAssistBA</a>
         <nav>
             <ul>
                 <li class="active"><a href="#hero">Inicio</a></li>
