--- a/subpaginas/compra.htm
+++ b/subpaginas/compra.htm
@@ -7,17 +7,17 @@
     <link rel="apple-touch-icon" sizes="76x76" href="">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/c8452dd290.js" crossorigin="anonymous"></script>
-    <title>CarAsistBA</title>
+    <title>CarAssistBA</title>
 </head>
 <body>
 <header>
     <div class="wrapper">
-        <a href="../index.htm">CarAsistBA</a>
+        <a href="../index.htm">CarsAsistBA</a>
         <nav>
             <ul>
-                <li class="active"><a href="#hero">Inicio</a></li>
-                <li><a href="#general">Servicios</a></li>
-                <li><a href="#nosotros">Nosotros</a></li>
+                <li class="active"><a href="../index.htm">Inicio</a></li>
+                <li><a href="../index.htm">Servicios</a></li>
+                <li><a href="../index.htm">Nosotros</a></li>
                 <li><a href="compra.htm">Comprar</a></li>
                 <li><a href="venta.htm">Cotizar</a></li>
             </ul>
@@ -27,8 +27,24 @@
     <div class="nav-bg"></div>
 </header>
 
-<section>
+<section id="form-box">
+    <div class="form-texto">
+        <h1>Contactanos</h1>
+        <p>Envianos tu consulta y te contactaremos en la brevedad</p>
+    </div>
 
+    <form action="" class="form">
+      
+        <input type="text" placeholder="Name" class="form__input" id="name" />
+        <label for="name" class="form__label">Nombre</label>
+  
+        <input type="email" placeholder="Email" class="form__input" id="email" />
+        <label for="email" class="form__label">Email</label>
+  
+        <input type="text" placeholder="Subject" class="form__input" id="subject" />
+        <label for="subject" class="form__label">Mensaje</label>
+        
+      </form>
 </section>
 
 
