--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@
                 <p>Nos encargamos de los trámites administrativos que se necesitan para transferir un auto. <br> 
                     Usted paga solo cuando el trámite se completa.</p>
             </div>
-            <h4>Saber Mas</h4>
+            <a href="subpaginas\compra.htm">Saber Más</a>
         </div>
         <div class="intro-cards">
             <h3>Quiero Vender</h3>
@@ -63,7 +63,7 @@
                 <p>Nos encargamos de simplificarlo para usted, cuidando su tiempo y <br> protegiendo su capital.</p>
                 <p>Le dedicamos la atencion a todos los detalles para completar su tramite</p>
             </div>
-            <h4>Saber Mas</h4>
+            <a href="subpaginas\venta.htm">Saber Más</a>
         </div>
         <!-- <h1>Asesoramiento en Compra y Venta de vehículos</h1>
         <p>Somos una empresa con más de cinco años de existencia y cientos de clientes satisfechos. Trabajamos en conjunto para lograr la mejor transacción.</p>
