--- a/subpaginas/venta.htm
+++ b/subpaginas/venta.htm
@@ -55,5 +55,11 @@
       </form>
 </section>
 
+<footer>
+    <div class="footer-box">
+
+    </div>
+    <p>Desarollado por <a href="https://www.linkedin.com/in/felipevarelaolid/">Felipe Varela Olid</a></p>
+</footer>
 </body>
 </html>
