--- a/index.htm
+++ b/index.htm
@@ -170,8 +170,8 @@
             <div class="nosotros-cards-img">
 
             </div>
-            <h4>Marcos Fernández Roth </h4>
-            <p>25 años</p>
+            <h4><span>Marcos Fernández Roth</span></h4>
+            <p><mark>25 años</mark></p>
             <p>Estudiante de quinto año de <mark>Ingeniería Automotriz en la U.T.N.</mark> Antiguamente <mark>responsable</mark> de la venta de vehículos usados de RDA Renting S.A. <br> Hoy dirige su <mark>emprendimiento</mark> CarAssistba S.A
             </p>
         </div>
@@ -179,8 +179,8 @@
             <div class="nosotros-cards-img">
 
             </div>
-            <h4>Diógenes Fernández Roth </h4>
-            <p>28 años</p>
+            <h4><span>Diógenes Fernández Roth</span></h4>
+            <p><mark>28 años</mark></p>
             <p>Ocupo el cargo de <mark>Jefe de Ventas</mark> de vehículos usados del Grupo Rusoniello S.A. de agencias multimarca <mark>Audi, Jeep, Kia, VW.</mark> </p>
         </div>
     </div>
