--- a/subpaginas/compra.htm
+++ b/subpaginas/compra.htm
@@ -18,7 +18,7 @@
                 <li class="active"><a href="../index.htm">Inicio</a></li>
                 <li><a href="../index.htm">Servicios</a></li>
                 <li><a href="../index.htm">Nosotros</a></li>
-                <li><a href="compra.htm">Comprar</a></li>
+                <li><a href="compra.htm"><span>Comprar</span></a></li>
                 <li><a href="venta.htm">Cotizar</a></li>
             </ul>
         </nav>
@@ -28,7 +28,7 @@
 </header>
 
 <section id="form-box">
-    <div class="form-texto">
+    <div class="form-texto form-compra">
         <h1>Contactanos</h1>
         <p>Envianos tu consulta y te contactaremos en la brevedad</p>
     </div>
