--- a/subpaginas/venta.htm
+++ b/subpaginas/venta.htm
@@ -19,7 +19,7 @@
                 <li><a href="../index.htm">Servicios</a></li>
                 <li><a href="../index.htm">Nosotros</a></li>
                 <li><a href="compra.htm">Comprar</a></li>
-                <li><a href="venta.htm">Cotizar</a></li>
+                <li><a href="venta.htm"><span>Cotizar</span></a></li>
             </ul>
         </nav>
         <a href="venta.htm" class="cta">Vender</a>
@@ -28,7 +28,7 @@
 </header>
 
 <section id="form-box">
-    <div class="form-texto">
+    <div class="form-texto form-venta">
         <h1>Contactanos</h1>
         <p>Envianos tu consulta y te contactaremos en la brevedad</p>
     </div>
